// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frontend component snapshots renders Badge 1`] = `null`;

exports[`frontend component snapshots renders Button 1`] = `null`;

exports[`frontend component snapshots renders Card composition 1`] = `null`;

exports[`frontend component snapshots renders EarningsSkeleton 1`] = `
<div
  className="relative mb-8 flex flex-col gap-8 overflow-hidden rounded-3xl border border-[var(--border)] bg-[var(--surface)] p-8 shadow-[var(--shadow)] dark:bg-[rgba(var(--surface-rgb),0.03)] dark:backdrop-blur-[20px]"
>
  <div
    className="z-[1] flex items-center justify-between max-[992px]:flex-col max-[992px]:items-start max-[992px]:gap-8"
  >
    <div
      className="flex flex-1 flex-col"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-3 "
        style={
          {
            "height": "0.75rem",
            "width": "180px",
          }
        }
      />
      <div
        className="flex items-baseline gap-2"
      >
        <div
          className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] max-[992px]:h-[2.5rem] "
          style={
            {
              "height": "3.5rem",
              "width": "240px",
            }
          }
        />
        <div
          className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
          style={
            {
              "height": "1.5rem",
              "width": "60px",
            }
          }
        />
      </div>
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mt-4 rounded-[20px] "
        style={
          {
            "height": "1.75rem",
            "width": "140px",
          }
        }
      />
    </div>
    <div
      className="flex min-h-[200px] flex-1 justify-end max-[992px]:w-full max-[992px]:justify-center"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  rounded-full"
        style={
          {
            "height": "180px",
            "width": "180px",
          }
        }
      />
    </div>
  </div>
  <div
    className="z-[1] grid grid-cols-3 gap-6 max-[768px]:grid-cols-1"
  >
    <div
      className="rounded-2xl border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow)] dark:bg-[rgba(var(--surface-rgb),0.03)]"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-3 "
        style={
          {
            "height": "0.75rem",
            "width": "120px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1.5rem",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="rounded-2xl border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow)] dark:bg-[rgba(var(--surface-rgb),0.03)]"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-3 "
        style={
          {
            "height": "0.75rem",
            "width": "120px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1.5rem",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="rounded-2xl border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow)] dark:bg-[rgba(var(--surface-rgb),0.03)]"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-3 "
        style={
          {
            "height": "0.75rem",
            "width": "120px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1.5rem",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`frontend component snapshots renders EmptyState 1`] = `
<div
  className="my-6 flex flex-col items-center justify-center rounded-2xl border-2 border-dashed px-8 py-12 text-center bg-[var(--accent-transparent)] border-[var(--accent-transparent-strong)]"
>
  <div
    className="mb-4 text-5xl"
  >
    <span>
      ✨
    </span>
  </div>
  <span
    as="h3"
    className="mb-2 text-[var(--text)]"
    size="lg"
    weight="bold"
  >
    No Streams
  </span>
  <span
    as="p"
    className="mb-6 max-w-[400px] text-[var(--muted)]"
    size="md"
  >
    Create your first payroll stream
  </span>
  <div
    className="mt-4"
  >
    <button
      onClick={[Function]}
      size="md"
      variant="primary"
    >
      Create stream
    </button>
  </div>
</div>
`;

exports[`frontend component snapshots renders Input with validation 1`] = `null`;

exports[`frontend component snapshots renders Skeleton variants 1`] = `null`;

exports[`frontend component snapshots renders SkeletonCard 1`] = `
<div
  className="flex flex-col gap-3 rounded-lg border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[0_2px_4px_rgba(0,0,0,0.05)] "
>
  <div
    className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
    style={
      {
        "height": "12px",
        "width": "40%",
      }
    }
  />
  <div
    className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
    style={
      {
        "height": "28px",
        "width": "100%",
      }
    }
  />
  <div
    className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
    style={
      {
        "height": "12px",
        "width": "50%",
      }
    }
  />
</div>
`;

exports[`frontend component snapshots renders SkeletonRow 1`] = `
<div
  aria-busy="true"
  className="flex items-center justify-between gap-4 rounded-md border border-[var(--border)] bg-[var(--bg)] p-[15px] "
>
  <div
    className="flex flex-1 flex-col gap-[6px]"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
      style={
        {
          "height": "14px",
          "width": "120px",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
      style={
        {
          "height": "12px",
          "width": "180px",
        }
      }
    />
  </div>
  <div
    className="flex flex-1 flex-col gap-[6px]"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
      style={
        {
          "height": "12px",
          "width": "140px",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  mb-2 h-[14px] w-full"
      style={
        {
          "height": "12px",
          "width": "100px",
        }
      }
    />
  </div>
  <div
    className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
    style={
      {
        "height": "20px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`frontend component snapshots renders Spinner 1`] = `null`;

exports[`frontend component snapshots renders StreamCardSkeleton 1`] = `
<div
  className="relative overflow-hidden rounded-[20px] border border-[var(--border)] bg-[var(--surface-subtle)] p-6"
>
  <div
    className="mb-4 flex items-start justify-between"
  >
    <div
      className="flex-1"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
        style={
          {
            "height": "1.5rem",
            "width": "60%",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "0.75rem",
            "width": "80%",
          }
        }
      />
    </div>
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] rounded-md "
      style={
        {
          "height": "1.5rem",
          "width": "100px",
        }
      }
    />
  </div>
  <div
    className="mb-4 rounded-lg border border-[var(--border)] bg-[var(--surface)]/50 p-3"
  >
    <div
      className="mb-2 flex items-center gap-2"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  rounded-full"
        style={
          {
            "height": "1.25rem",
            "width": "1.25rem",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1rem",
            "width": "140px",
          }
        }
      />
    </div>
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
      style={
        {
          "height": "0.75rem",
          "width": "60%",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
      style={
        {
          "height": "0.75rem",
          "width": "90%",
        }
      }
    />
  </div>
  <div
    className="my-6"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-3 "
      style={
        {
          "height": "0.75rem",
          "width": "120px",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
      style={
        {
          "height": "2rem",
          "width": "180px",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
      style={
        {
          "height": "1rem",
          "width": "100px",
        }
      }
    />
  </div>
  <div
    className="my-4 h-2 overflow-hidden rounded bg-[var(--surface)]"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="mb-4 flex justify-between"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
      style={
        {
          "height": "0.75rem",
          "width": "60px",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
      style={
        {
          "height": "0.75rem",
          "width": "80px",
        }
      }
    />
  </div>
  <div
    className="flex flex-col gap-3"
  >
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] rounded-xl "
      style={
        {
          "height": "3rem",
          "width": "100%",
        }
      }
    />
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] rounded-xl "
      style={
        {
          "height": "3rem",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`frontend component snapshots renders Tooltip 1`] = `
<div
  aria-label="Current network status"
  className="group relative ml-1 inline-flex cursor-help items-center text-[var(--accent)]"
>
  <span
    className="text-sm"
    size="sm"
  />
  <div
    className="pointer-events-none absolute bottom-[125%] left-1/2 z-[1000] -translate-x-1/2 whitespace-nowrap rounded-md bg-[var(--text)] px-3 py-2 text-xs text-[var(--bg)] opacity-0 shadow-[0_10px_15px_-3px_var(--shadow-color)] transition-opacity duration-200 group-hover:opacity-100"
  >
    Current network status
  </div>
</div>
`;

exports[`frontend component snapshots renders VaultBalanceSkeleton 1`] = `
<div
  className="rounded-xl border border-[var(--border)] bg-[var(--surface)] p-5"
>
  <div
    className="mb-4 flex items-center justify-between"
  >
    <div
      className="flex items-center gap-2"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  rounded-full"
        style={
          {
            "height": "2.5rem",
            "width": "2.5rem",
          }
        }
      />
      <div>
        <div
          className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-1 "
          style={
            {
              "height": "1rem",
              "width": "80px",
            }
          }
        />
        <div
          className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
          style={
            {
              "height": "0.75rem",
              "width": "100px",
            }
          }
        />
      </div>
    </div>
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] rounded-md "
      style={
        {
          "height": "32px",
          "width": "32px",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-2 gap-3"
  >
    <div
      className="rounded-lg bg-[var(--surface)]/50 p-3"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
        style={
          {
            "height": "0.75rem",
            "width": "60px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1rem",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="rounded-lg bg-[var(--surface)]/50 p-3"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
        style={
          {
            "height": "0.75rem",
            "width": "60px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1rem",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="rounded-lg bg-[var(--surface)]/50 p-3"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
        style={
          {
            "height": "0.75rem",
            "width": "60px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1rem",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="rounded-lg bg-[var(--surface)]/50 p-3"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] mb-2 "
        style={
          {
            "height": "0.75rem",
            "width": "60px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "1rem",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    className="mt-4"
  >
    <div
      className="mb-2 flex justify-between"
    >
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "0.75rem",
            "width": "70px",
          }
        }
      />
      <div
        className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite]  "
        style={
          {
            "height": "0.75rem",
            "width": "30px",
          }
        }
      />
    </div>
    <div
      className="rounded bg-[linear-gradient(90deg,var(--surface-subtle)_25%,var(--border)_50%,var(--surface-subtle)_75%)] bg-[length:200%_100%] [animation:shimmer_1.4s_ease-in-out_infinite] rounded-full "
      style={
        {
          "height": "0.5rem",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
